# bind_cpp

./: README.md  pyproject.toml  setup.py  test.py
bind_cpp/: __init__.py  html_generator.pyi
bind_cpp/src/cpp/: CMakeLists.txt  html_generator.cpp
